Default skin : fix vertical scrollbar width for big lists

--- a/saf/framework/skins/default/vertical_scrollbar.css
+++ b/saf/framework/skins/default/vertical_scrollbar.css
@@ -2,6 +2,7 @@
   background-color: white;
   border: 1px solid darkgray;
   height: auto;
+  min-width: 17px;
   overflow: hidden;
   padding: 0;
   vertical-align: top;
